# kanki-irodsclient

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  iRODS.app.pkg.plist  irodsclient.desktop  postflight_osx.py
SPECS/: kanki-irodsclient.spec
cmake/: FindiRODS.cmake
config/: build.pri
src/: AppConfig.plist  CMakeLists.txt  _rodsgenquery.h  icons.qrc  irods.icns  kanki-irodsclient.pro  main.cpp  rodsconditionwidget.cpp  rodsconditionwidget.h  rodsconnection.cpp  rodsconnection.h  rodsconnectthread.cpp  rodsconnectthread.h  rodscriteriawidget.cpp  rodscriteriawidget.h  rodsdatainstream.cpp  rodsdatainstream.h  rodsdataoutstream.cpp  rodsdataoutstream.h  rodsdatastream.cpp  rodsdatastream.h  rodsdateconditionwidget.cpp  rodsdateconditionwidget.h  rodsdownloadthread.cpp  rodsdownloadthread.h  rodserrorlogwindow.cpp  rodserrorlogwindow.h  rodserrorwindow.cpp  rodserrorwindow.h  rodsfindwindow.cpp  rodsfindwindow.h  rodsfindwindow.ui  rodsgenquery.cpp  rodsgenquery.h  rodsmainwindow.cpp  rodsmainwindow.h  rodsmainwindow.ui  rodsmetadataconditionwidget.cpp  rodsmetadataconditionwidget.h  rodsmetadataitem.cpp  (+36 more)
